feat: Implement Signin page using reusable input fields
style: Implement responsive desgin on Signin page using scss and BEM methodology

feat: Implement dashboard layout components header, sidebar and main content section

style: Implement responsiveness for all dashboard components - header, sidebar and maincontent section

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,19 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
-  },
-  "include": ["vite.config.ts"]
+	"compilerOptions": {
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"composite": true,
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"module": "ESNext",
+		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+		"jsx": "react-jsx"
+	},
+	"include": ["vite.config.ts"]
 }
