--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "lucide-react": "^0.395.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.3",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
