--- a/package.json
+++ b/package.json
@@ -1,39 +1,45 @@
 {
-  "name": "landsqr-test",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
-    "formik": "^2.4.6",
-    "lucide-react": "^0.395.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.3",
-    "react-countup": "^6.5.3",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5",
-    "yup": "^1.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+	"name": "landsqr-test",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"test": "vitest",
+		"test:ui": "vitest --ui"
+	},
+	"dependencies": {
+		"axios": "^1.7.2",
+		"formik": "^2.4.6",
+		"lucide-react": "^0.395.0",
+		"react": "^18.2.0",
+		"react-countup": "^6.5.3",
+		"react-dom": "^18.2.0",
+		"react-query": "^3.39.3",
+		"react-router-dom": "^6.23.1",
+		"react-toastify": "^10.0.5",
+		"yup": "^1.4.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.4.6",
+		"@testing-library/react": "^14.2.0",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/node": "^20.14.2",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/ui": "^1.6.0",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"jsdom": "^24.0.0",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0",
+		"vitest": "^1.6.0"
+	}
 }
